<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar" />

    <include layout="@layout/toolbar_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:background="@drawable/settings_selector"
        android:id="@+id/rl_edit_name">

        <TextView
            android:id="@+id/tv_edit_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_name_input_dialog_title"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_edit_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:singleLine="true"
            android:layout_below="@+id/tv_edit_name_label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_100"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:background="@drawable/settings_selector"
        android:id="@+id/rl_edit_username">

        <TextView
            android:id="@+id/tv_edit_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_username_input_dialog_title"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_edit_username_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:singleLine="true"
            android:layout_below="@+id/tv_edit_username_label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_100"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:background="@drawable/settings_selector"
        android:id="@+id/rl_notifications">

        <TextView
            android:id="@+id/tv_notifications_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notifications"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp" />

        <CheckBox
            android:id="@+id/cb_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_100"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:background="@drawable/settings_selector"
        android:id="@+id/rl_logout">

        <TextView
            android:id="@+id/tv_logout_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_logout"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp" />

    </RelativeLayout>

</LinearLayout>